--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Ashish Choure</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
+            <h1>Ashish Choure</h1>
+            <h2>R&D Engineer Software 4</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,9 +73,30 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Detailed-oriented, responsible and committed engineer, with a get-it-done, on-time and high-quality product spirit, and more than a decade of experience defining requirements, designing, implementing, testing and delivering complex back-end applications using variety programming languages and technologies. 
+                    </br>                    
+                    </br>
+                        <b>Specialties:</b> Machine Learning, Deep Learning, C++, Win32 SDK, MFC, Socket Programming, Multithreading, COM, OOPS 
+                    </br>
+                    </br>
+                        <b>Area:</b> Performance improvement, Design, Machine learning, NLP, Deep learning 
+                    </br>
+                    </br>
+                        <b>Programming languages and libraries:</b> Python, scikit-learn, NLTK, NetworkX, Pytorch,  C, C++, C#, Windows, Linux/Unix  
+                    </br>
+                    </br>
+                        <b>Database:</b> MS SQL 
+                    </br>
+                    </br>    
+                        <b>Tools:</b> Visual Studio, Jupyter notebook, Pycharm, VS Code 
+                    </br>
+                    </br>
+                        <b>Methodologies:</b> Agile Software Development, Object-Oriented Programming (OOP), Scrum, Test-driven Development. 
+                    </br> 
+                    </br>   
+                        <b>Certificates:</b>
+
+                        Applied Data Science with Python Specialization by University of Michigan
                     </p>
                 </div>
             </div>
@@ -116,29 +137,20 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+            <h3>Maulana Azad National Institute of Technology</h3>
+            <span class="education-date">July 2004 - June 2008</span>
+            <h4>Bachelor of Technology in Information Technology</h4>            
         </div>
         <!-- End .education-block -->
-
+        
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Licenses & Certifications</h3>
+            <span class="education-date">Dec 2019</span>
+            <h4></h4>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
+                    <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/KDHPHLVNMWZC" target="_blank">Applied Data Science with Python Specialization</a>                    
+                </li>                
             </ul>
         </div>
         <!-- End .education-block -->
@@ -187,33 +199,18 @@
 
     <div id="skills">
         <h2 class="heading">Skills</h2>
-        <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
+        <ul>            
+            <li>Python</li>            
             <li>C</li>
             <li>C#</li>
             <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Machine Learning</li>
+            <li>Deep Learning</li>
+            <li>NLP</li>
+            <li>Pytorch</li>
+            <li>Windows</li>
+            <li>NetworkX</li>
+            <li>Linux/Unix</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -237,7 +234,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; 2020 Ashish Choure
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -248,23 +245,11 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-                        </li>
+                            <a href="https://github.com/ashishchoure23" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        </li>                        
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                        </li>
+                            <a href="https://www.linkedin.com/in/ashish-choure-1b7b881b/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        </li>                        
                     </ul>
                 </div>
             </div>
